[package]
name = "drone_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile-dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy_rapier3d = "0.21.0"
nalgebra = "0.32.2"
